# platform

./: .dockerignore  .gitattributes  .gitignore  .symverify-ignore  MANIFEST_CANONICAL.json  README.md
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: build-and-publish.yml  verify-canonical.yml
apps/: README.md
apps/attestation-service/: Dockerfile  README.md  pyproject.toml
apps/attestation-service/src/attestation/: __init__.py  badges.py  config.py  main.py  publisher.py
apps/attestation-service/static/: verify.css  verify.html  verify.js
docs/: README.md
server/: Caddyfile  README.md  compose.yaml
server/apps/: attestation-service.compose.yaml  engine.compose.yaml  landing.compose.yaml  reflexivity-webapp.compose.yaml
shared/: README.md
tools/: README.md
tools/symverify/: README.md  build_exe.py  pyproject.toml
tools/symverify/src/symverify/: __init__.py  __main__.py  __main_gui__.py  canonical.py  ci_status.py  cli.py  config.py  daemon.py  db.py  deploy.py  fingerprint.py  git_ops.py  gui.py  manifest.py  manifest_cache.py  narrative.py  push.py  render.py  scaffold.py  stabilizer.py  state_collect.py
tools/symverify/tests/: test_canonical.py  test_ci_status.py  test_daemon_narrate.py  test_db.py  test_deploy.py  test_fingerprint.py  test_gui.py  test_manifest.py  test_manifest_cache.py  test_narrative.py  test_push.py  test_scaffold.py  test_stabilizer.py
