[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attestation-service"
version = "0.1.0"
description = "Symmetism public attestation service — publishes deploy attestations to a Gist, serves /verify, generates README badges."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Symmetism", email = "Symmetist@users.noreply.github.com" },
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/attestation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
