[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symverify"
version = "0.1.0"
description = "The Symmetism verifier — manifests, trinity fingerprint, stabilizer audit. Implements {Q_A, H_S} = 0 as the project's coherence law."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Symmetism", email = "Symmetist@users.noreply.github.com" },
]
keywords = ["symmetism", "verifier", "stabilizer", "manifest", "fingerprint"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "click>=8.1",
  "rich>=13.0",
  "watchdog>=4.0",
  "pydantic>=2.6",
  "httpx>=0.27",
  "openai>=1.40",
  "apscheduler>=3.10",
  "python-dotenv>=1.0",
  "paramiko>=3.4",          # used by symverify.deploy for SSH/SFTP
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
gui = [
  "customtkinter>=5.2",
]
exe = [
  "customtkinter>=5.2",
  "pyinstaller>=6.6",
]

[project.scripts]
sym = "symverify.cli:main"

[project.urls]
Repository = "https://github.com/Symmetism/Platform"
Issues    = "https://github.com/Symmetism/Platform/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/symverify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
